--- a/Src/Sample/AsyncDomainEventSubscriber/Sample.AsyncDomainEventSubscriber.csproj
+++ b/Src/Sample/AsyncDomainEventSubscriber/Sample.AsyncDomainEventSubscriber.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Community\AccountEventSubscriber.cs" />
+    <Compile Include="Products\ProductEventSubscriber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
