add AppUnitOfWork to support message persistence and publishing for classic appservice

--- a/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework4.5.1.csproj
+++ b/Src/iFramework.Plugins/iFramework.Infrastructure.EntityFramework/IFramework.EntityFramework4.5.1.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Repositories\IMergeOptionChangable.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Repositories\RepositoryExtention.cs" />
+    <Compile Include="UnitOfWork\AppUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\IAppUnitOfWork.cs" />
     <Compile Include="UnitOfWork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
