move IAppUnitOfWork to IFramework

--- a/Src/iFramework/IFramework4.5.1.csproj
+++ b/Src/iFramework/IFramework4.5.1.csproj
@@ -207,6 +207,7 @@
     <Compile Include="SysExceptions\NoMessageId.cs" />
     <Compile Include="SysExceptions\SysException.cs" />
     <Compile Include="UnitOfWork\BaseUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\IAppUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
     <Compile Include="UnitOfWork\MockUnitOfWork.cs" />
   </ItemGroup>
