implement HA Feature of Equeue

--- a/Src/iFramework.Plugins/EQueueBroker/App.config
+++ b/Src/iFramework.Plugins/EQueueBroker/App.config
@@ -22,8 +22,16 @@
     </assemblyBinding>
   </runtime>
   <appSettings>
+    <add key="nameServerAddress" value="" />
+    <add key="brokerName" value="Broker1" />
+    <add key="groupName" value="BrokerGroup1" />
+    <add key="producerPort" value="5000" />
+    <add key="consumerPort" value="5001" />
+    <add key="adminPort" value="5002" />
+    <add key="fileStoreRootPath" value="d:\equeue-store1" />
     <add key="isMemoryMode" value="false" />
-    <add key="fileStoreRootPath" value="d:\equeue-store" />
+    <add key="syncFlush" value="false" />
+    <add key="notifyWhenMessageArrived" value="true" />
     <add key="chunkSize" value="256" />
     <!--MB-->
     <add key="chunkWriteBuffer" value="256" />
