add profile httphandler

--- a/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/Web.config
+++ b/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/Web.config
@@ -44,6 +44,10 @@
       <remove name="FormsAuthentication"/>
       <remove name="WebDAVModule"/>
     </modules>
+    <handlers>
+      <remove name="profile"/>
+      <add name ="profile" path="profile" verb="GET" type="IFramework.AspNet.ProfileHandler"  preCondition="integratedMode,runtimeVersionv4.0"/>
+    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
