--- a/Src/Sample/Sample.CommandService/Web.config
+++ b/Src/Sample/Sample.CommandService/Web.config
@@ -233,6 +233,9 @@
       <add name="ExtensionlessUrlHandler-Eventtegrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <remove name="profile"/>
+      <add name ="profile" path="profile" verb="*" type="IFramework.AspNet.ProfileHandler"  preCondition="integratedMode,runtimeVersionv4.0"/>
+
     </handlers>
   </system.webServer>
   <system.identityModel>
