--- a/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/IFramework.Sample.AuthWeb.csproj
+++ b/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/IFramework.Sample.AuthWeb.csproj
@@ -278,6 +278,10 @@
       <Project>{6554cd55-20a4-4200-9c70-e14d61f2b30a}</Project>
       <Name>IFramework.SingleSignOn</Name>
     </ProjectReference>
+    <ProjectReference Include="..\IFramework.WebApi\IFramework.AspNet.csproj">
+      <Project>{bafca280-6b58-44e8-b0e7-ed6f51c0eaec}</Project>
+      <Name>IFramework.AspNet</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
