--- a/Src/iFramework.Plugins/IFramework.MessageQueue.ServiceBus/IFramework.MessageQueue.ServiceBus4.6.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.ServiceBus/IFramework.MessageQueue.ServiceBus4.6.csproj
@@ -61,8 +61,11 @@
   <ItemGroup>
     <Compile Include="Config\Configuration.cs" />
     <Compile Include="MessageFormat\MessageContext.cs" />
+    <Compile Include="QueueConsumer.cs" />
     <Compile Include="ServiceBusClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceBusConsumer.cs" />
+    <Compile Include="SubscriptionConsumer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
