--- a/Src/iFramework.Plugins/EQueueBroker/App.config
+++ b/Src/iFramework.Plugins/EQueueBroker/App.config
@@ -28,7 +28,7 @@
     <add key="producerPort" value="5000" />
     <add key="consumerPort" value="5001" />
     <add key="adminPort" value="5002" />
-    <add key="fileStoreRootPath" value="d:\equeue-store1" />
+    <add key="fileStoreRootPath" value="d:\equeue-store" />
     <add key="isMemoryMode" value="false" />
     <add key="syncFlush" value="false" />
     <add key="notifyWhenMessageArrived" value="true" />
