Add command reply in messagestore so that we can directlly reply duplicated command with the same reply

--- a/Src/iFramework/IFramework4.5.1.csproj
+++ b/Src/iFramework/IFramework4.5.1.csproj
@@ -73,6 +73,7 @@
     <Compile Include="MessageQueue\MessageQueueFactory.cs" />
     <Compile Include="MessageQueue\MockMessageQueueClient.cs" />
     <Compile Include="Message\IMessageAsyncHandler.cs" />
+    <Compile Include="Message\Impl\CommandHandledInfo.cs" />
     <Compile Include="Message\Impl\HandlerTypeInfo.cs" />
     <Compile Include="MessageQueue\SlidingDoor.cs" />
     <Compile Include="Message\Impl\MessageExtension.cs" />
