--- a/Src/iFramework/IFramework4.5.1.csproj
+++ b/Src/iFramework/IFramework4.5.1.csproj
@@ -166,11 +166,10 @@
     <Compile Include="Message\MessageState.cs" />
     <Compile Include="Message\TopicAttribute.cs" />
     <Compile Include="Repositories\DomainRepository.cs" />
-    <Compile Include="SysExceptions\CurrentMessageContextIsNull.cs" />
-    <Compile Include="SysExceptions\DomainException.cs" />
-    <Compile Include="SysExceptions\ErrorCode.cs" />
-    <Compile Include="SysExceptions\MessageDuplicatelyHandled.cs" />
-    <Compile Include="SysExceptions\NoCommandHandlerExists.cs" />
+    <Compile Include="Exceptions\CurrentMessageContextIsNull.cs" />
+    <Compile Include="Exceptions\ErrorCode.cs" />
+    <Compile Include="Exceptions\MessageDuplicatelyHandled.cs" />
+    <Compile Include="Exceptions\NoCommandHandlerExists.cs" />
     <Compile Include="Infrastructure\CookieHelper.cs" />
     <Compile Include="Infrastructure\DynamicJson.cs" />
     <Compile Include="Infrastructure\GuidUtil.cs" />
@@ -205,10 +204,10 @@
     <Compile Include="Specifications\SemanticsAttribute.cs" />
     <Compile Include="Specifications\Specification.cs" />
     <Compile Include="Specifications\SpecificationUtility.cs" />
-    <Compile Include="SysExceptions\NoCommandTopic.cs" />
-    <Compile Include="SysExceptions\NoHandlerExists.cs" />
-    <Compile Include="SysExceptions\NoMessageId.cs" />
-    <Compile Include="SysExceptions\SysException.cs" />
+    <Compile Include="Exceptions\NoCommandTopic.cs" />
+    <Compile Include="Exceptions\NoHandlerExists.cs" />
+    <Compile Include="Exceptions\NoMessageId.cs" />
+    <Compile Include="Exceptions\DomainException.cs" />
     <Compile Include="UnitOfWork\BaseUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IAppUnitOfWork.cs" />
     <Compile Include="UnitOfWork\IUnitOfWork.cs" />
