--- a/Src/Sample/Sample.CommandService/IPRestrict.config
+++ b/Src/Sample/Sample.CommandService/IPRestrict.config
@@ -1,4 +1,4 @@
 ﻿{
-  "GlobalWhiteList":["::1"],
-  "EntryWhiteListDictionary": {"key": ["::1"]}
+"GlobalWhiteList":["192.168.0.1"],
+"EntryWhiteListDictionary": {"key": ["192.168.0.1"]}
 }
