--- a/Src/iFramework/IFramework4.5.1.csproj
+++ b/Src/iFramework/IFramework4.5.1.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Event\IEventAsyncSubscriber.cs" />
     <Compile Include="Infrastructure\Logging\MockLogger.cs" />
     <Compile Include="Infrastructure\Logging\MockLoggerFactory.cs" />
+    <Compile Include="Infrastructure\QueryExtension.cs" />
     <Compile Include="IoC\IContainer.cs" />
     <Compile Include="IoC\Injection.cs" />
     <Compile Include="IoC\Lifetime.cs" />
