--- a/Src/Sample/Sample.CommandServiceTests/App.config
+++ b/Src/Sample/Sample.CommandServiceTests/App.config
@@ -2,14 +2,12 @@
 
 <configuration>
   <configSections>
-    <section name="unity"
-             type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
     <!--<add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=.;Database=SampleModelContext;User ID=sa;password=zhj777"/>-->
-    <add name="SampleModelContext" providerName="System.Data.SqlClient"
-         connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
+    <add name="SampleModelContext" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
   <unity xmlns="http://schemas.microsoft.com/practices/2010/unity">
