--- a/Src/iFramework.Plugins/MSKafka.Test/packages.config
+++ b/Src/iFramework.Plugins/MSKafka.Test/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="Confluent.Kafka" version="0.9.5" targetFramework="net451" />
+  <package id="librdkafka.redist" version="0.9.5" targetFramework="net451" />
   <package id="log4net" version="2.0.5" targetFramework="net45" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
   <package id="ZooKeeper.Net" version="3.4.6.2" targetFramework="net451" />
