--- a/Src/iFramework.Plugins/MSKafka.Test/App.config
+++ b/Src/iFramework.Plugins/MSKafka.Test/App.config
@@ -12,6 +12,9 @@
          connectionString="Server=(localdb)\projects;Database=SampleModelContext;Integrated Security=true;" />
     <!--<add name="MessageStore" providerName="System.Data.SqlClient" connectionString="Server=.\sqlexpress;Database=SampleMessageStore;Integrated Security=true;" />-->
   </connectionStrings>
+  <appSettings>
+    <add key="zkConnectionString" value="localhost:2181"/>
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
