--- a/Src/iFramework.Plugins/MSKafka.Test/log4net.config
+++ b/Src/iFramework.Plugins/MSKafka.Test/log4net.config
@@ -35,7 +35,7 @@
     <!--日志文件名是否为静态-->
     <staticLogFileName value="false" />
     <filter type="log4net.Filter.LevelMatchFilter">
-      <levelToMatch value="DEBUG" />
+      <levelToMatch value="ERROR" />
     </filter>
     <!-- do not log anything else -->
     <filter type="log4net.Filter.DenyAllFilter" />
