--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -62,10 +62,14 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
-  <!--<logger name="QueueClient">
+  <logger name="CommandBus">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger>-->
+  </logger>
+  <logger name="CommandController">
+    <level value="DEBUG"/>
+    <appender-ref ref="debugRollingFile"/>
+  </logger>
   <logger name="WebApiApplication">
     <level value="DEBUG" />
     <appender-ref ref="debugRollingFile" />
