--- a/Src/iFramework.Plugins/MSKafka.Test/log4net.config
+++ b/Src/iFramework.Plugins/MSKafka.Test/log4net.config
@@ -48,7 +48,7 @@
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%date %5level - %message%newline" />
     </layout>
-    <threshold value="DEBUG" />
+    <threshold value="ERROR" />
   </appender>
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
