1. remove unnecessary index of MessageStore 2.use any instead of count to implement repository exists 3.remove lifetime for repository repository should be stateless while dbcontext is state. 4.add IDbContext for Entity so that domain doesn't depend on the entityframework extension 5. add getdescription method

--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -62,14 +62,14 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
-  <logger name="CommandBus">
+  <!--<logger name="CommandBus">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>
   <logger name="CommandController">
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
-  </logger>
+  </logger>-->
   <logger name="WebApiApplication">
     <level value="DEBUG" />
     <appender-ref ref="debugRollingFile" />
