--- a/Src/iFramework/IFramework4.5.1.csproj
+++ b/Src/iFramework/IFramework4.5.1.csproj
@@ -216,6 +216,7 @@
     <Compile Include="UnitOfWork\MockUnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="IFramework4.5.1.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
