--- a/Src/iFramework.Plugins/IFramework.Unity.Mvc/IFramework.Unity.Mvc.csproj
+++ b/Src/iFramework.Plugins/IFramework.Unity.Mvc/IFramework.Unity.Mvc.csproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="IFramework.Unity.Mvc.1.0.0.nupkg" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
