--- a/Src/iFramework.Plugins/IFramework.Unity/IFramework.Unity.csproj
+++ b/Src/iFramework.Plugins/IFramework.Unity/IFramework.Unity.csproj
@@ -70,6 +70,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="IFramework.Unity.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
