add nuget publish files

--- a/Src/iFramework.Plugins/IFramework.MessageQueue.ConfluentKafka/IFramework.MessageQueue.ConfluentKafka.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.ConfluentKafka/IFramework.MessageQueue.ConfluentKafka.csproj
@@ -66,6 +66,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="IFramework.MessageQueue.ConfluentKafka.1.0.0.nupkg" />
+    <None Include="IFramework.MessageQueue.ConfluentKafka.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
