--- a/Src/iFramework.Plugins/IFramework.MessageStore.EntityFramework/IFramework.MessageStore.EntityFramework.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStore.EntityFramework/IFramework.MessageStore.EntityFramework.csproj
@@ -76,13 +76,15 @@
       <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
       <Name>IFramework4.5.1</Name>
     </ProjectReference>
-    <ProjectReference Include="..\iFramework.Infrastructure.EntityFramework\IFramework.EntityFramework4.5.1.csproj">
+    <ProjectReference Include="..\iFramework.Infrastructure.EntityFramework\IFramework.EntityFramework.csproj">
       <Project>{c00b8ad6-47c2-4642-877e-2c759d05dcfe}</Project>
-      <Name>IFramework.EntityFramework4.5.1</Name>
+      <Name>IFramework.EntityFramework</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="IFramework.MessageStoring.EntityFramework.1.0.0.nupkg" />
+    <None Include="IFramework.MessageStoring.EntityFramework.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
