--- a/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/IFramework.Sample.AuthWeb.csproj
+++ b/Src/iFramework.Plugins/IFramework.Sample.AuthWeb/IFramework.Sample.AuthWeb.csproj
@@ -269,9 +269,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
-      <Name>IFramework4.5.1</Name>
+      <Name>IFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\IFramework.SingleSignOn\IFramework.SingleSignOn.csproj">
       <Project>{6554cd55-20a4-4200-9c70-e14d61f2b30a}</Project>
