--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -217,7 +217,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="IFramework.1.0.0.nupkg" />
-    <None Include="IFramework4.5.1.nuspec" />
+    <None Include="IFramework.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
