--- a/Src/Sample/ApplicationEventSubscriber/Sample.ApplicationEventSubscriber.csproj
+++ b/Src/Sample/ApplicationEventSubscriber/Sample.ApplicationEventSubscriber.csproj
@@ -46,9 +46,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
-      <Name>IFramework4.5.1</Name>
+      <Name>IFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sample.ApplicationEvent\Sample.ApplicationEvent.csproj">
       <Project>{7c17f97f-3515-4a1b-aead-01689d087de0}</Project>
