--- a/Src/iFramework.Plugins/EQueueBroker/EQueueBroker.csproj
+++ b/Src/iFramework.Plugins/EQueueBroker/EQueueBroker.csproj
@@ -55,9 +55,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{0B36292C-8849-441D-8FB8-A053D43A8E72}</Project>
-      <Name>IFramework4.5.1</Name>
+      <Name>IFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\IFramework.Autofac\IFramework.Autofac.csproj">
       <Project>{85af5f30-37ac-4b1e-bc74-c84ee031ecc4}</Project>
