--- a/Src/iFramework.Plugins/IFramework.MessageQueue.EQueue/IFramework.MessageQueue.EQueue.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.EQueue/IFramework.MessageQueue.EQueue.csproj
@@ -78,14 +78,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="IFramework.MessageQueue.EQueue.1.0.0.nupkg" />
+    <None Include="IFramework.MessageQueue.EQueue.nuspec" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
-      <Name>IFramework4.5.1</Name>
+      <Name>IFramework</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
