--- a/Src/iFramework.Plugins/IFramework.MessageQueue.Kafka/IFramework.MessageQueue.MSKafka.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.Kafka/IFramework.MessageQueue.MSKafka.csproj
@@ -65,9 +65,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
-      <Name>IFramework4.5.1</Name>
+      <Name>IFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\ThirdParties\KafkaNET.Library\KafkaNET.Library.csproj">
       <Project>{a92dd03b-ee4f-4a78-9fb2-279b6348c7d2}</Project>
