--- a/Src/iFramework.Plugins/IFramework.Unity.Mvc/IFramework.Unity.Mvc.csproj
+++ b/Src/iFramework.Plugins/IFramework.Unity.Mvc/IFramework.Unity.Mvc.csproj
@@ -103,9 +103,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{0B36292C-8849-441D-8FB8-A053D43A8E72}</Project>
-      <Name>IFramework4.5.1</Name>
+      <Name>IFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\IFramework.Unity\IFramework.Unity.csproj">
       <Project>{57f61e21-4d31-4ce0-9dfb-7be6a113654a}</Project>
