--- a/Src/iFramework.Plugins/IFramework.WebApi/IFramework.AspNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.WebApi/IFramework.AspNet.csproj
@@ -114,9 +114,9 @@
       <Project>{8edc415a-2e94-402a-81f0-baf71a3bf6d7}</Project>
       <Name>IFramework.Log4Net</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
-      <Name>IFramework4.5.1</Name>
+      <Name>IFramework</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
