--- a/Src/iFramework.Plugins/MSKafka.Test/KafkaClient.Test.csproj
+++ b/Src/iFramework.Plugins/MSKafka.Test/KafkaClient.Test.csproj
@@ -96,9 +96,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\iFramework\IFramework4.5.1.csproj">
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj">
       <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
-      <Name>IFramework4.5.1</Name>
+      <Name>IFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Sample\Sample.Command\Sample.Command.csproj">
       <Project>{1e6d9a9a-ab62-4450-b589-2f434462dfe9}</Project>
@@ -112,9 +112,9 @@
       <Project>{07b18368-3d3f-4c12-b2f1-e38fc709226a}</Project>
       <Name>Sample.Persistence</Name>
     </ProjectReference>
-    <ProjectReference Include="..\IFramework.Log4Net\IFramework.Log4Net4.5.1.csproj">
+    <ProjectReference Include="..\IFramework.Log4Net\IFramework.Log4Net.csproj">
       <Project>{8edc415a-2e94-402a-81f0-baf71a3bf6d7}</Project>
-      <Name>IFramework.Log4Net4.5.1</Name>
+      <Name>IFramework.Log4Net</Name>
     </ProjectReference>
     <ProjectReference Include="..\IFramework.MessageQueue.ConfluentKafka\IFramework.MessageQueue.ConfluentKafka.csproj">
       <Project>{185b5fd4-016c-416e-9213-522573afef13}</Project>
@@ -124,9 +124,9 @@
       <Project>{c52b89cf-d3a6-48fc-ba3b-0daff977fa6e}</Project>
       <Name>IFramework.MessageQueue.MSKafka</Name>
     </ProjectReference>
-    <ProjectReference Include="..\IFramework.MessageStore.EntityFramework\IFramework.MessageStoring.EntityFramework4.6.csproj">
+    <ProjectReference Include="..\IFramework.MessageStore.EntityFramework\IFramework.MessageStore.EntityFramework.csproj">
       <Project>{78f72ab4-4f97-4b82-99ea-eb2d46cb63ca}</Project>
-      <Name>IFramework.MessageStoring.EntityFramework4.6</Name>
+      <Name>IFramework.MessageStore.EntityFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\IFramework.Unity\IFramework.Unity.csproj">
       <Project>{57f61e21-4d31-4ce0-9dfb-7be6a113654a}</Project>
