--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -70,6 +70,14 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
+  <logger name="CommunityCommandHandler">
+    <level value="DEBUG"/>
+    <appender-ref ref="debugRollingFile"/>
+  </logger>
+  <logger name="CommunityRepository">
+    <level value="DEBUG"/>
+    <appender-ref ref="debugRollingFile"/>
+  </logger>
   <logger name="WebApiApplication">
     <level value="DEBUG" />
     <appender-ref ref="debugRollingFile" />
