--- a/Src/iFramework.Plugins/IFramework.Autofac/IFramework.Autofac.csproj
+++ b/Src/iFramework.Plugins/IFramework.Autofac/IFramework.Autofac.csproj
@@ -34,6 +34,12 @@
       <HintPath>..\..\packages\Autofac.4.0.0\lib\net451\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Autofac.Extras.DynamicProxy, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Autofac.Extras.DynamicProxy.4.2.1\lib\net45\Autofac.Extras.DynamicProxy.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Castle.Core.4.0.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -77,6 +83,7 @@
     <Compile Include="Autofac.Configuration\SectionHandler.cs" />
     <Compile Include="Autofac.Configuration\XmlFileReader.cs" />
     <Compile Include="AutofacContainerExtension.cs" />
+    <Compile Include="AutofacLogInterceptor.cs" />
     <Compile Include="Config\Configuration.cs" />
     <Compile Include="ObjectContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
