--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
+  <package id="Autofac" version="4.0.0" targetFramework="net46" />
+  <package id="Autofac.Extras.DynamicProxy" version="4.2.1" targetFramework="net46" />
+  <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net46" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net4" />
@@ -38,6 +41,7 @@
   <package id="System.Spatial" version="5.6.0" targetFramework="net4" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
   <package id="Unity.AspNet.WebApi" version="4.0.1" targetFramework="net45" />
+  <package id="Unity.Interception" version="4.0.1" targetFramework="net46" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net4" />
