--- a/Src/iFramework.Plugins/IFramework.WebApi/IFramework.AspNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.WebApi/IFramework.AspNet.csproj
@@ -110,6 +110,10 @@
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\IFramework.JsonNet\IFramework.JsonNet.csproj">
+      <Project>{891d983d-f28a-4eb5-9ea4-a72296ef7569}</Project>
+      <Name>IFramework.JsonNet</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IFramework.Log4Net\IFramework.Log4Net.csproj">
       <Project>{8edc415a-2e94-402a-81f0-baf71a3bf6d7}</Project>
       <Name>IFramework.Log4Net</Name>
