--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -35,10 +35,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -47,7 +43,9 @@
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Threading.Tasks" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -61,6 +59,8 @@
     <Compile Include="Command\CommandBusExtension.cs" />
     <Compile Include="Command\ICommandAsyncHandler.cs" />
     <Compile Include="Event\IEventAsyncSubscriber.cs" />
+    <Compile Include="Infrastructure\DataContractJsonConvert.cs" />
+    <Compile Include="Infrastructure\IJsonConvert.cs" />
     <Compile Include="Infrastructure\Logging\MockLogger.cs" />
     <Compile Include="Infrastructure\Logging\MockLoggerFactory.cs" />
     <Compile Include="Infrastructure\QueryExtension.cs" />
@@ -173,7 +173,6 @@
     <Compile Include="Exceptions\MessageDuplicatelyHandled.cs" />
     <Compile Include="Exceptions\NoCommandHandlerExists.cs" />
     <Compile Include="Infrastructure\CookieHelper.cs" />
-    <Compile Include="Infrastructure\DynamicJson.cs" />
     <Compile Include="Infrastructure\GuidUtil.cs" />
     <Compile Include="IoC\IocFactory.cs" />
     <Compile Include="IoC\IoCInstanceProvider.cs" />
@@ -219,7 +218,6 @@
   <ItemGroup>
     <None Include="IFramework.1.0.0.nupkg" />
     <None Include="IFramework.nuspec" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
