1. add DomainExceptionEvent supporting. 2. rename sysexcption to domainexception. 3. improve AppUnitOfWork publish mesages 4. clean up code

--- a/Src/iFramework.Plugins/MSKafka.Test/KafkaClient.Test.csproj
+++ b/Src/iFramework.Plugins/MSKafka.Test/KafkaClient.Test.csproj
@@ -78,7 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command.cs" />
-    <Compile Include="DomainEvent.cs" />
+    <Compile Include="AggregateRootEvent.cs" />
     <Compile Include="KafkaClientTests.cs" />
     <Compile Include="Program.MSKafka.cs" />
     <Compile Include="Program.cs" />
