--- a/Src/Sample/Sample.DomainEvent/Sample.DomainEvents.csproj
+++ b/Src/Sample/Sample.DomainEvent/Sample.DomainEvents.csproj
@@ -43,10 +43,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Community\AccountRegistered.cs" />
-    <Compile Include="DomainEvent.cs" />
+    <Compile Include="AggregateRootEvent.cs" />
+    <Compile Include="Products\ProductCountNotEnough.cs" />
     <Compile Include="Products\ProductCreated.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleDomainException.cs" />
+    <Compile Include="AggregateRootExceptionEvent.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj">
