add log4net.kafka in wcf aoplog test

--- a/Src/Sample/Sample.WcfService/log4net.config
+++ b/Src/Sample/Sample.WcfService/log4net.config
@@ -71,6 +71,27 @@
     </layout>
     <threshold value="DEBUG" />
   </appender>
+  <appender name="kafkaAppender" type="log4net.Kafka.KafkaAppender, log4net.Kafka">
+    <KafkaSettings>
+      <brokers>
+        <add value="http://localhost:9092" />
+      </brokers>
+      <topic type="log4net.Layout.PatternLayout">
+        <conversionPattern value="Kafka.%level" />
+        <!--<conversionPattern value="kafka.logstash.DEBUG" />-->
+      </topic>
+    </KafkaSettings>
+    <layout type="IFramework.Log4Net.JsonLogLayout, IFramework.Log4Net" >
+      <app value="WcfService" />
+    </layout>
+    <threshold value="DEBUG" />
+    <!--<layout type="log4net.Layout.PatternLayout">
+			<conversionPattern value="%d [%t] %-5p %c %m%n" />
+		</layout>-->
+    <!--<layout type="log4net.Kafka.LogstashLayout,log4net.Kafka" >
+      <app value="erp.logs" />
+    </layout>-->
+  </appender>
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <!--取消这里注释记录所有debug log-->
@@ -91,10 +112,10 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
- 
+
   <logger name="Service1">
-    <appender-ref ref="debugRollingFile"/>
-    <level value="INFO"/>
+    <appender-ref ref="kafkaAppender"/>
+    <level value="DEBUG"/>
   </logger>
   <logger name="CommunityCommandHandler">
     <level value="DEBUG"/>
@@ -102,7 +123,7 @@
   </logger>
   <logger name="CommunityRepository">
     <level value="DEBUG"/>
-    <appender-ref ref="debugRollingFile"/>
+    <appender-ref ref="kafkaAppender"/>
   </logger>
   <logger name="WebApiApplication">
     <level value="DEBUG" />
