--- a/Src/Sample/Sample.WcfService/packages.config
+++ b/Src/Sample/Sample.WcfService/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="kafka-net" version="0.9.0.65" targetFramework="net452" />
+  <package id="log4net" version="2.0.8" targetFramework="net452" />
+  <package id="log4net.Kafka" version="0.1.0.4" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net452" />
 </packages>
