--- a/Src/Sample/Sample.CommandService/log4net.config
+++ b/Src/Sample/Sample.CommandService/log4net.config
@@ -14,8 +14,12 @@
     <maximumFileSize value="10MB" />
     <!--日志文件名是否为静态-->
     <staticLogFileName value="false" />
-    <layout type="log4net.Layout.PatternLayout,log4net">
+    <!--<layout type="log4net.Layout.PatternLayout,log4net">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
+    </layout>-->
+    <layout type="IFramework.Log4Net.JsonLogLayout, IFramework.Log4Net" >
+      <app value="CommandService" />
+      <serializeMessageObject value="false" />
     </layout>
     <threshold value="ERROR" />
   </appender>
@@ -34,15 +38,17 @@
     <maximumFileSize value="10MB" />
     <!--日志文件名是否为静态-->
     <staticLogFileName value="false" />
-    <filter type="log4net.Filter.LevelMatchFilter">
+    <!--<filter type="log4net.Filter.LevelMatchFilter">
       <levelToMatch value="DEBUG" />
-    </filter>
-    <!-- do not log anything else -->
-    <filter type="log4net.Filter.DenyAllFilter" />
-
-    <layout type="log4net.Layout.PatternLayout">
-      <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
+    </filter>-->
+    <threshold value="DEBUG" />
+    <layout type="IFramework.Log4Net.JsonLogLayout, IFramework.Log4Net" >
+      <app value="CommandService" />
+      <serializeMessageObject value="true" />
     </layout>
+    <!--<layout type="log4net.Layout.PatternLayout">
+      <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
+    </layout>-->
   </appender>
   <appender name="traceAppender" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
