add loggername in LogInterceptionAttribute

--- a/Src/Sample/Sample.WcfService/log4net.config
+++ b/Src/Sample/Sample.WcfService/log4net.config
@@ -75,7 +75,7 @@
   <appender name="kafkaAppender" type="log4net.Kafka.KafkaAppender, log4net.Kafka">
     <KafkaSettings>
       <brokers>
-        <add value="http://192.168.99.134:9092" />
+        <add value="http://localhost:9092" />
       </brokers>
       <topic type="log4net.Layout.PatternLayout">
         <conversionPattern value="Kafka.%level" />
@@ -86,7 +86,7 @@
       <app value="WcfService" />
       <serializeMessageObject value="true" />
     </layout>
-    <threshold value="DEBUG" />
+    <threshold value="INFO" />
     <!--<layout type="log4net.Layout.PatternLayout">
 			<conversionPattern value="%d [%t] %-5p %c %m%n" />
 		</layout>-->
@@ -97,7 +97,7 @@
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <!--取消这里注释记录所有debug log-->
-    <!--<appender-ref ref="debugRollingFile" />  -->
+    <appender-ref ref="kafkaAppender" />  
     <appender-ref ref="errorRollingFile" />
     <appender-ref ref="traceAppender" />
   </root>
