add ChangeLogLevel in ILogger

--- a/Src/Sample/Sample.WcfService/log4net.config
+++ b/Src/Sample/Sample.WcfService/log4net.config
@@ -86,7 +86,7 @@
       <app value="WcfService" />
       <serializeMessageObject value="true" />
     </layout>
-    <threshold value="INFO" />
+    <threshold value="DEBUG" />
     <!--<layout type="log4net.Layout.PatternLayout">
 			<conversionPattern value="%d [%t] %-5p %c %m%n" />
 		</layout>-->
