--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Event\IAggregateRootExceptionEvent.cs" />
     <Compile Include="Event\IDomainExceptionEvent.cs" />
     <Compile Include="Event\IEventAsyncSubscriber.cs" />
+    <Compile Include="Event\Impl\SyncEventSubscriberProvider.cs" />
     <Compile Include="Infrastructure\DataContractJsonConvert.cs" />
     <Compile Include="Infrastructure\IJsonConvert.cs" />
     <Compile Include="Infrastructure\Logging\AopEnteringLog.cs" />
