1. improve cachemanager return value to support no value for  value object such as int , long 2. add foundatio redis cache plugin

--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Event\IDomainExceptionEvent.cs" />
     <Compile Include="Event\IEventAsyncSubscriber.cs" />
     <Compile Include="Event\Impl\SyncEventSubscriberProvider.cs" />
+    <Compile Include="Infrastructure\Caching\CacheValue.cs" />
+    <Compile Include="Infrastructure\Caching\Impl\CacheManagerBase.cs" />
     <Compile Include="Infrastructure\DataContractJsonConvert.cs" />
     <Compile Include="Infrastructure\IJsonConvert.cs" />
     <Compile Include="Infrastructure\ILock.cs" />
