--- a/Src/IFramework4.5Tests/IFramework.Tests.csproj
+++ b/Src/IFramework4.5Tests/IFramework.Tests.csproj
@@ -158,9 +158,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\iFramework.Plugins\IFramework.FoundatioLockRedis\IFramework.FoundatioLockRedis.csproj">
+    <ProjectReference Include="..\iFramework.Plugins\IFramework.FoundatioLockRedis\IFramework.FoundatioRedis.csproj">
       <Project>{5914cafb-b521-4a9e-9f5d-f0cdc439cfdb}</Project>
-      <Name>IFramework.FoundatioLockRedis</Name>
+      <Name>IFramework.FoundatioRedis</Name>
     </ProjectReference>
     <ProjectReference Include="..\iFramework.Plugins\IFramework.FoundatioLock\IFramework.FoundatioLock.csproj">
       <Project>{ed7dc1bf-939f-43c8-aedf-89589ae3701d}</Project>
