--- a/Src/iFramework.Plugins/IFramework.FoundatioLockRedis/IFramework.FoundatioRedis.csproj
+++ b/Src/iFramework.Plugins/IFramework.FoundatioLockRedis/IFramework.FoundatioRedis.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{5914CAFB-B521-4A9E-9F5D-F0CDC439CFDB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IFramework.FoundatioLockRedis</RootNamespace>
-    <AssemblyName>IFramework.FoundatioLockRedis</AssemblyName>
+    <RootNamespace>IFramework.FoundatioRedis</RootNamespace>
+    <AssemblyName>IFramework.FoundatioRedis</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caching\RedisCacheManager.cs" />
     <Compile Include="Config\FrameworkConfigurationExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -81,5 +82,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
